fix: clone repository if it doesn't exist on deployment server
The deployment scripts were failing because they assumed /root/brewos-cloud
already exists. Added logic to clone the repository if the directory
doesn't exist, making deployments work on fresh servers.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,13 @@ jobs:
           command_timeout: 15m
           script: |
             set -e
+            
+            # Clone repository if it doesn't exist
+            if [ ! -d "/root/brewos-cloud" ]; then
+              echo "Cloning cloud repository..."
+              git clone https://github.com/brewos-io/cloud.git /root/brewos-cloud
+            fi
+            
             cd /root/brewos-cloud
 
             # Clean up any local changes
