fix: include 'v' in app tag name construction
The app repository uses tags like 'app-v0.8.3' but the workflow
was constructing 'app-0.8.3' (without the 'v'). This fixes the
tag name to match the actual tag format.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           VERSION_NUM="${VERSION#cloud-v}"
           echo "version_num=$VERSION_NUM" >> $GITHUB_OUTPUT
-          APP_VERSION="app-${VERSION_NUM}"
+          APP_VERSION="app-v${VERSION_NUM}"
           echo "app_version=$APP_VERSION" >> $GITHUB_OUTPUT
 
       - name: Get App Commit SHA and Wait for Workflow
