--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -49,14 +49,146 @@ jobs:
         working-directory: admin
         run: npm run build
 
+  wait-for-app:
+    name: Wait for App Build
+    runs-on: ubuntu-latest
+    outputs:
+      run_id: ${{ steps.wait-for-app.outputs.run_id }}
+      commit_sha: ${{ steps.wait-for-app.outputs.commit_sha }}
+    steps:
+      - name: Get App Commit SHA and Wait for Workflow
+        id: wait-for-app
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const branch = 'main';
+            const workflowId = 'ci.yml';
+            const maxWaitTime = 30 * 60 * 1000; // 30 minutes
+            const pollInterval = 10 * 1000; // 10 seconds
+            const startTime = Date.now();
+            
+            console.log(`Looking for latest commit on ${branch} in brewos-io/app`);
+            
+            // Get the latest commit SHA from main branch
+            let commitSha;
+            try {
+              const { data: ref } = await github.rest.git.getRef({
+                owner: 'brewos-io',
+                repo: 'app',
+                ref: `heads/${branch}`
+              });
+              commitSha = ref.object.sha;
+              console.log(`Latest commit on ${branch}: ${commitSha}`);
+            } catch (error) {
+              throw new Error(`Error getting commit from ${branch} in brewos-io/app: ${error.message}`);
+            }
+            
+            core.setOutput('commit_sha', commitSha);
+            
+            // Find workflow runs for this commit
+            console.log(`Looking for workflow runs for commit ${commitSha}...`);
+            let workflowRun = null;
+            let attempts = 0;
+            
+            while (!workflowRun && (Date.now() - startTime) < maxWaitTime) {
+              attempts++;
+              const { data: runs } = await github.rest.actions.listWorkflowRuns({
+                owner: 'brewos-io',
+                repo: 'app',
+                workflow_id: workflowId,
+                head_sha: commitSha,
+                per_page: 10
+              });
+              
+              if (runs.workflow_runs.length > 0) {
+                // Find the most recent successful or in-progress run
+                workflowRun = runs.workflow_runs.find(run => 
+                  run.status === 'in_progress' || 
+                  run.status === 'queued' || 
+                  (run.status === 'completed' && run.conclusion === 'success')
+                ) || runs.workflow_runs[0];
+                console.log(`Found workflow run: ${workflowRun.id} (status: ${workflowRun.status}, conclusion: ${workflowRun.conclusion})`);
+                break;
+              }
+              
+              console.log(`Attempt ${attempts}: No workflow run found yet, waiting ${pollInterval/1000}s...`);
+              await new Promise(resolve => setTimeout(resolve, pollInterval));
+            }
+            
+            if (!workflowRun) {
+              throw new Error(`No workflow run found for commit ${commitSha} after ${maxWaitTime/1000/60} minutes`);
+            }
+            
+            // Wait for the workflow to complete
+            console.log(`Waiting for workflow run ${workflowRun.id} to complete...`);
+            while (workflowRun.status !== 'completed' && (Date.now() - startTime) < maxWaitTime) {
+              await new Promise(resolve => setTimeout(resolve, pollInterval));
+              
+              const { data: run } = await github.rest.actions.getWorkflowRun({
+                owner: 'brewos-io',
+                repo: 'app',
+                run_id: workflowRun.id
+              });
+              
+              workflowRun = run;
+              console.log(`Status: ${workflowRun.status}${workflowRun.conclusion ? `, conclusion: ${workflowRun.conclusion}` : ''}`);
+            }
+            
+            if (workflowRun.status !== 'completed') {
+              throw new Error(`Workflow run ${workflowRun.id} did not complete within ${maxWaitTime/1000/60} minutes`);
+            }
+            
+            if (workflowRun.conclusion !== 'success') {
+              throw new Error(`Workflow run ${workflowRun.id} completed with conclusion: ${workflowRun.conclusion}`);
+            }
+            
+            console.log(`✓ Workflow run ${workflowRun.id} completed successfully!`);
+            core.setOutput('run_id', workflowRun.id);
+
+      - name: Download App Artifact
+        uses: dawidd6/action-download-artifact@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: ci.yml
+          workflow_conclusion: success
+          run_id: ${{ steps.wait-for-app.outputs.run_id }}
+          name: app-cloud-build
+          path: app-build
+          repo: brewos-io/app
+          if_no_artifact_found: fail
+
+      - name: Upload App Build for Deployment
+        uses: actions/upload-artifact@v6
+        with:
+          name: app-build-for-deploy
+          path: app-build/
+          retention-days: 1
+
   deploy-staging:
     name: Deploy to Staging
-    needs: build-check
+    needs: [build-check, wait-for-app]
     runs-on: ubuntu-latest
     environment:
       name: staging
       url: https://staging.brewos.io
     steps:
+      - name: Download App Build Artifact
+        uses: actions/download-artifact@v6
+        with:
+          name: app-build-for-deploy
+          path: app-build
+
+      - name: Upload App Build to Server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.STAGING_SSH_HOST || 'staging.brewos.io' }}
+          username: root
+          key: ${{ secrets.STAGING_SERVER_SSH_KEY }}
+          source: "app-build/*"
+          target: "/tmp/app-build"
+          strip_components: 0
+
       - name: Deploy to staging server
         uses: appleboy/ssh-action@v1.2.4
         env:
@@ -83,28 +215,11 @@ jobs:
             git reset --hard origin/main
             git clean -fd
 
-            # Checkout app repository for build
-            if [ ! -d "../app" ]; then
-              git clone https://github.com/brewos-io/app.git ../app
-            fi
-            cd ../app
-            git fetch origin main
-            git checkout main
-            git pull origin main
-
-            # Build app for cloud
-            npm ci
-            cat > .env << EOF
-            VITE_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-            VITE_CLOUD_WS_URL=wss://staging.brewos.io/ws
-            VITE_ENVIRONMENT=staging
-            EOF
-            NODE_OPTIONS="--max-old-space-size=4096" npm run build
-
-            # Copy built app to cloud service
-            cd ../brewos-cloud
+            # Copy pre-built app from uploaded artifact
             rm -rf web
-            cp -r ../app/dist web
+            mkdir -p web
+            cp -r /tmp/app-build/* web/
+            rm -rf /tmp/app-build
 
             # Create .env for cloud service
             cat > .env << EOF
